correct all move button overlaping

--- a/scss/theme/_moodle.scss
+++ b/scss/theme/_moodle.scss
@@ -2033,8 +2033,8 @@ span[data-region="favourite-icon"] .icon{
     color: #4c6d85;
 }
 
-select#menumovecategoriesto {
-    margin-bottom: 4px;
+input[value="Move"].btn.btn-secondary {
+    margin-top: 4px;
 }
 
 
